[package]
name = "tiny_google_oidc"
version = "0.2.0"
readme = "README.md"
repository = "https://github.com/nakaryo716/tiny_google_oidc.git" 
license = "MIT" 
description = """
Tiny library for Google's OpenID Connect
"""
documentation = "https://docs.rs/tiny_google_oidc" 
keywords = ["oidc", "Authentication", "web-programming"]
edition = "2024"

[dependencies]
base64 = "0.22.1"
http = "1.3.1"
itertools = "0.14.0"
rand = "0.9.0"
reqwest = { version = "0.12.15", features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tracing = "0.1.41"
url = "2.5.4"
uuid = { version = "1.16.0", features = ["v4", "fast-rng"] }

[dev-dependencies]
anyhow = "1.0.97"
axum = "0.8.1" 
axum-extra = { version = "0.10.0", features = ["cookie"] }
bytes = "1"
dotenvy = "0.15.7"
cookie = "0.18"
http = "1.3.1"
hyper ={ version = "1", features = ["server"]}
hyper-util ={ version = "^0.1", features = ["full"] }
http-body = "1"
http-body-util = "0.1"
redis = { version = "0.29.2", features = ["tokio-comp", "aio", "connection-manager"]}
tokio = { version = "1.44.1", features = ["full"] }
tokio-util = { version = "0.7.14", features = ["io"]}
tracing-subscriber = "0.3.19"
futures-util = "0.3.31"

[[example]]
name = "axum_server"
path = "examples/axum_server.rs"

[[example]]
name = "hyper"
path = "examples/hyper/main.rs"
